Keeping variables.less changes

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,6 +1,13 @@
 //variables.less
 
-@black: #000000;
-@white: #FFFFFF;
-@grey: #CCCCCC;
+@darkPrimaryColor: rgba(25, 118, 210, 1);
+@primaryColor: rgba(33, 150, 243, 1);
+@lightPrimaryColor: rgba(187, 222, 251, 1);
+@textIcons: rgba(255, 255, 255, 1);
+@accentColor: rgba(83, 109, 254, 1);
+@primaryText: rgba(33, 33, 33, 1);
+@secondaryText: rgba(114, 114, 114, 1);
+@dividerColor: rgba(182, 182, 182, 1);
 
+@bodyFont:"Helvetica Neue",Helvetica,"Open Sans",Arial,sans-serif
+@headlineFont:Baskerville,"Baskerville Old Face","Hoefler Text",Garamond,"Times New Roman",serif
